updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I graduated with my Masters in Digital Media and Communication Studies from Thee Florida State University. Everything I learn in this course will be adding much needed practical skills to the theoretical skills I have already gained by attaining my degree</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Detroit, MI but I have lived many places in the last few years. Of course I lived in Tallahassee for some time, but I have also lived in North Carolina, Ohio and even the Virgin Islands!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I recently got married back in July 2018, and I had my first child in July 2019. Needless to say, one of my favorite things to do is spending time with the new little family that I created in the last few years. Additionally, I really enjoy speaking with my family and friends. Since none of my closest family and friends live in South Florda, I really cherish being able to Facetime, text and call them on a daily basis.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is something that would combine both my love of digital media and higher education. Therefore, I would love to be able to the overall digital content manager at a retupatuble university.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Oakland Park (Fort Lauderdale), Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to gain the skills to be a web developer to be able to get my dream job and accomplish my goal of becoming more financially independent.</p>
     </section>
 
     <footer id="footer">
