updating typo in details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I recently got married back in July 2018, and I had my first child in July 2019. Needless to say, one of my favorite things to do is spending time with the new little family that I created in the last few years. Additionally, I really enjoy speaking with my family and friends. Since none of my closest family and friends live in South Florda, I really cherish being able to Facetime, text and call them on a daily basis.</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job is something that would combine both my love of digital media and higher education. Therefore, I would love to be able to the overall digital content manager at a retupatuble university.</p>
+      <p>My dream job is something that would combine both my love of digital media and higher education. Therefore, I would love to be the overall digital content manager at a retupatuble university.</p>
       <h1>Where do you live?</h1>
       <p>I currently live in Oakland Park (Fort Lauderdale), Florida</p>
       <h1>Why do you want to be a web developer?</h1>
